--- a/mobile_demo.html
+++ b/mobile_demo.html
@@ -8,6 +8,6 @@
         <title>Mobile KPI Report</title>                
     </head>
     <body>
-     <iframe width="600" height="2000" src="https://datastudio.google.com/embed/reporting/2c706468-5b5b-4e6f-96f4-127e936d3e91/page/ykECC" frameborder="0" style="border:0" allowfullscreen></iframe>   
+     <iframe width="100%" height="2000" src="https://datastudio.google.com/embed/reporting/2c706468-5b5b-4e6f-96f4-127e936d3e91/page/ykECC" frameborder="0" style="border:0" allowfullscreen></iframe>   
     </body>
 </html>
