--- a/fitbit.html
+++ b/fitbit.html
@@ -1,11 +1,11 @@
-html>
+<html>
     <head>    
         <title>Fitbit Report</title>                
     </head>
     <body>
      <html>
     <head>    
-        <title>Mobile KPI Report</title>                
+        <title>Fitbit Report</title>                
     </head>
     <body>
      <iframe width="100%" height="2000" src="https://datastudio.google.com/embed/reporting/a4884434-80ce-4fdc-b8eb-2ed98d3428ad/page/ykECC" frameborder="0" style="border:0" allowfullscreen></iframe>   
